--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -27,8 +26,7 @@
 <body>
   <div align="center">
     <h1>Lets do something new..</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
+    <h2>This application was deployed using CodePipeline, S3 bucket</h2>
   </div>
 </body>
 </html>
