index.html updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Sample Deployment</title>
   <style>
     body {
+      color:black;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
